--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://gitlab.com/lobachevskiy.maksim/homework-gulp-scss#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -28,5 +29,6 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "node-sass": "^5.0.0"
-  }
+  },
+  "dependencies": {}
 }
